[gd_scene load_steps=2 format=3 uid="uid://h0k8rbv5y06v"]

[ext_resource type="Script" path="res://gameManager/game_manager.gd" id="1_smbuf"]

[node name="GameManager" type="Node"]
script = ExtResource("1_smbuf")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0

[node name="backtoMenuTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="backtoMenuTimer" to="." method="_on_backto_menu_timer_timeout"]
